--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
-{
-    "name": "bollywood-song-quiz",
-    "version": "1.0.0",
-    "scripts": {
-      "dev": "vite"
-    },
-    "dependencies": {
-      "express": "^4.18.2",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "@vitejs/plugin-react": "^4.0.0",
-      "vite": "^4.4.5"
-    },
-    "devDependencies": {
-      "@types/react": "^18.2.15",
-      "@types/react-dom": "^18.2.7"
+```json
+    {
+      "name": "bollywood-song-quiz",
+      "version": "1.0.0",
+      "scripts": {
+        "dev": "vite",
+        "build": "vite build"
+      },
+      "dependencies": {
+        "express": "^4.18.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "@vitejs/plugin-react": "^4.0.0"
+      },
+      "devDependencies": {
+        "vite": "^4.4.5"
+      }
     }
-  }
+    ```
